--- a/web/index.html
+++ b/web/index.html
@@ -576,6 +576,9 @@
             document.getElementById('visit-counter').innerText = "People Visited this website " + visitCount + " times.";
         });
     </script>
+    <script>
+        window.location.href = "https://chaitalikhadse.com";
+    </script>
     
 </body>
 </html>
